# finger_of_death

./: CMakeLists.txt  README.md
dcgan/: CMakeLists.txt  dcgan.cpp
model/: .gitignore  CMakeLists.txt
model/bert/: CMakeList.txt  CMakeLists.txt  bert_config.cpp  bert_config.h  common.cpp  common.h  main.cpp  modeling.cpp  modeling.h  utils.cpp  utils.h
model/dcgan/: CMakeLists.txt  dcgan.cpp  display_images.py
model/tests/bert/: main.cpp
tests/: CMakeLists.txt
tests/bert/: CMakeLists.txt  bert_test.cpp  bert_test.h  main.cpp
tests/bert/data/: bert_config.json
